syntax = "proto3";

package order;

option go_package = ".;order";

service Order{
  // 用户订单列表
  rpc OrderList(OrderListRequest) returns (OrderListResponse){}
}

message OrderListRequest{
  // 用户id
  int64 userid = 1;
}

message OrderListResponse{
  message OrderInfo{
    // 订单号
    string no = 1;
    // 订单金额
    double price = 2;
    // 订单状态：1待付款2配送中3已完成
    int32 status = 3;
  }
  repeated OrderInfo data = 1;
}



